<resources>
    <string name="app_name">Mr Helpr</string>

    <string name="first_slide_title">Search Services</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <string name="first_slide_desc">You can search any services you want. We will display specific or all related services to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and services registered with us.</string>
    <string name="fourth_slide_desc">We provide all the services at your home. As you have the app in your pocket then you don\'t have to worry about anything.  </string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="shops">Shops</string>
    <string name="banks">Bans</string>
    <string name="airports">Airports</string>

    <string name="featured_locations">All Featured Services</string>
    <string name="featured_locations_description">All the services that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most Viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search.....</string>
    <string name="slogan_name">Services Marketplace For ALL!</string>

    <string name="login_register">Login/Register</string>
    <string name="_1_123_456_7890">123–456–7890</string>
    <string name="proceed"><![CDATA[Proceed —>]]></string>
    <string name="login"><![CDATA[Login —>]]></string>
    <string name="didn_t_get_the_otp_resend_otp">Didn\'t get the OTP? RESEND OTP.</string>
    <string name="we_have_sent_you_a_4_digit_verification_code_in_the_given_mobile_number">We have sent you a 6 digit verification code in the given mobile number.</string>
    <string name="enter_verification_code">Verify Phone Number</string>
    <string name="logo">LOGO</string>
    <string name="services_marketplace_for_all">Services Marketplace For All!</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="welcome">Welcome,</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new Journey</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="mobile_no">Mobile No</string>
    <string name="signup"><![CDATA[SignUp —>]]></string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="profile">Profile</string>
    <string name="jayati_sakervala">Jayati Sakervala</string>
    <string name="jayatiii_20">jayatiii.20</string>
    <string name="_123">$123</string>
    <string name="balance">balance</string>
    <string name="Balance">Balance</string>
    <string name="booking">Booking</string>
    <string name="_12">12</string>
    <string name="jayati_gmail_com">jayati@gmail.com</string>
    <string name="_91_7016134050">+91–7016134050</string>
    <string name="qwerty">qwerty</string>
    <string name="update">Update</string>
    <string name="logout"><![CDATA[Logout —>]]></string>
    <string name="remember_me">Remember Me</string>
    <string name="update1"><![CDATA[Update—>]]></string>
    <string name="password_updated_success_message">Your password has been updated!</string>
    <string name="password_updated">PASSWORD UPDATED</string>
    <string name="todo">TODO</string>
    <string name="next"><![CDATA[Next —>]]></string>
    <string name="provide_your_account_s_phone_number_for_which_you_want_to_reset_your_password">Provide your account\'s phone number for which you want to reset your password!</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No</string>
    <string name="address">Address</string>
    <string name="hours_of_operation">Hours of Operation</string>
    <string name="new_password">New Password</string>
    <string name="your_identity_has_been_verified_set_your_new_password">Your identity has been verified! Set your new password!</string>
    <string name="home">HOME</string>
    <string name="search_services">SEARCH SERVICES</string>
    <string name="all_services">ALL SERVICES</string>
    <string name="profile1">Profile</string>
    <string name="powered_by_jayati_sakervala">Created By: Jayati Sakervala</string>
    <string name="textview">TextView</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="menu">Menu</string>
    <string name="doctor">Doctor</string>
    <string name="teacher">Teacher</string>
    <string name="view_all_services">View All Services</string>
    <string name="profile12">PROFILE</string>
    <string name="share">Share</string>
    <string name="share1">SHARE</string>
    <string name="rate_us">RATE US</string>
    <string name="services">Services</string>
    <string name="electrician">Electrician</string>
    <string name="home_cleaner">Home Cleaner</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="dietician">Dietician</string>
    <string name="home_tutor">Home Tutor</string>
    <string name="physiotherapy">Physiotherapy</string>
    <string name="pathalogist">Pathalogist</string>
    <string name="yoga_and_fitness_trainer">Yoga and Fitness Trainer</string>
    <string name="code">CODE</string>
    <string name="verification">VERIFICATION</string>
    <string name="enter_the_one_time_password_sent_on">Enter the one time password sent on</string>
    <string name="verify_code">VERIFY CODE</string>
    <string name="repairing">Repairing</string>
    <string name="qline_diagnostics">Qline Diagnostics</string>
    <string name="tb_test_stool_testing_allergy_testing_hormone_testing_and_blood_group_test">TB Test, Stool Testing, Allergy Testing, Hormone testing and Blood Group Test</string>
    <string name="submit"><![CDATA[Submit —>]]></string>
</resources>
