<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="#F1F0F0"
    android:paddingStart="15dp"
    tools:ignore="RtlSymmetry">

    <TextView
        android:id="@+id/menu_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/slogan_name"
        android:textColor="@android:color/black"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/menu_slogan"
        android:fontFamily="@font/brandon_grotesque_black"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <ImageView
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_above="@id/app_name"
        android:layout_marginBottom="-30dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="135dp"
        android:src="@drawable/menu_desc"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/todo" />

</RelativeLayout>