<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Common.LoginSignup.Login"
    android:theme="@style/userProfile">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:transitionName="logo_image"
        android:src="@drawable/logowithtext"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/bungee"
        android:text="@string/hello_there_welcome_back"
        android:textColor="#000000"
        android:textSize="40sp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:fontFamily="@font/antic"
        android:text="@string/sign_in_to_continue"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="logo_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.rilixtech.CountryCodePicker
                android:id="@+id/ccp2"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:layout_margin="6dp"
                android:background="@android:color/black"
                app:ccp_backgroundColor="@android:color/black"
                app:ccp_textColor="@android:color/white"
                app:ccp_dialogTextColor="@android:color/white"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_numb"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_no"
                android:textColor="#000000"
                android:textColorHint="#000000"
                app:boxStrokeColor="#000000"
                app:boxStrokeErrorColor="#FF0000"
                app:errorTextColor="#FF0000"
                android:layout_toEndOf="@id/ccp2"
                android:transitionName="phone_tran">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_phone_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:textColor="#000000" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="#000000"
            android:textColorHint="#000000"
            app:boxStrokeColor="#000000"
            app:boxStrokeErrorColor="#FF0000"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/color_password_toggle"
            android:transitionName="password_tran">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="#000000" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:id="@+id/forget_password_block"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/remember_me"
                style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:buttonTint="@android:color/black"
                android:text="@string/remember_me"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/button"
            android:text="@string/login"
            android:textColor="#FFFFFF"
            android:transitionName="button_tran" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="#fff"
            android:clickable="true"
            android:elevation="0dp"
            android:focusable="true"
            android:fontFamily="@font/antic"
            android:text="@string/new_user_sign_up"
            android:textColor="#000000"
            android:textSize="15sp"
            android:textStyle="bold"
            android:transitionName="login_signup_tran"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

</LinearLayout>