<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="160dp"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/featured_image"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:scaleType="centerCrop"
            android:src="@drawable/qline"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/featured_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:textColor="#131313"
            android:lineHeight="23dp"
            android:text="@string/qline_diagnostics"
            android:textSize="16sp"
            tools:targetApi="p" />

        <RatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4.9"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/featured_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tb_test_stool_testing_allergy_testing_hormone_testing_and_blood_group_test"
            android:textAlignment="center"
            android:textColor="#0C0C0C" />

    </LinearLayout>

</androidx.cardview.widget.CardView>